[gd_scene load_steps=4 format=3 uid="uid://bivatbt3fgqt"]

[ext_resource type="Script" path="res://Scripts/World.gd" id="1_iai4r"]
[ext_resource type="PackedScene" uid="uid://w07x6te4s4nw" path="res://Scenes/player.tscn" id="2_2b82l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wj1p"]
size = Vector2(41.6834, 66.5331)

[node name="World" type="Node2D"]
script = ExtResource("1_iai4r")

[node name="PlayableArea" type="Area2D" parent="."]
position = Vector2(0, -704)
scale = Vector2(1, 1.52)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayableArea"]
position = Vector2(288, 552)
scale = Vector2(19.96, 19.96)
shape = SubResource("RectangleShape2D_0wj1p")

[node name="Player" parent="." instance=ExtResource("2_2b82l")]
position = Vector2(289, 944)
motion_mode = 1

[node name="CarsSpawn" type="Timer" parent="."]
autostart = true

[node name="CarsContainer" type="Node2D" parent="."]

[connection signal="body_exited" from="PlayableArea" to="." method="_on_playable_area_body_exited"]
[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="timeout" from="CarsSpawn" to="." method="_on_cars_spawn_timeout"]
